<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="ROOT">
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/appearance"
        android:key="Appearance">
        <Preference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/theme_title"
            android:key="md_theme"/>
        <Preference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/settings_hidden"
            android:summary="@string/settings_hidden_summary">
            <intent
                android:targetPackage="com.gmail.heagoo.apkeditor.pro"
                android:action="android.intent.action.VIEW"
                android:targetClass="com.gmail.heagoo.apkeditor.SettingHideActivity"/>
        </Preference>
        <Preference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/action_edit"
            android:summary="@string/action_edit_desc">
            <intent
                android:targetPackage="com.gmail.heagoo.apkeditor.pro"
                android:action="android.intent.action.VIEW"
                android:targetClass="com.gmail.heagoo.apkeditor.SettingEditorActivity"/>
        </Preference>
        <ListPreference
            android:entries="@array/language_key"
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/preferred_language"
            android:key="md_lang"
            android:summary="%s"
            android:entryValues="@array/language_value"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/mtrl_pref_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/app_display">
        <ListPreference
            android:entries="@array/order_key"
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/app_list_order"
            android:key="AppListOrder"
            android:entryValues="@array/order_value"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/mtrl_pref_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/apk_decoding"
        android:key="DecodeCategory">
        <ListPreference
            android:entries="@array/decode_mode_key"
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/decode_mode"
            android:key="DecodeMode"
            android:dialogTitle="@string/decode"
            android:entryValues="@array/decode_mode_value"/>
        <EditTextPreference
            android:layout="@layout/mtrl_pref_item"
            android:maxLength="2"
            android:title="@string/smali_api_level"
            android:key="SmaliApiLevel"
            android:summary="@string/smali_api_summary"
            android:inputType="numberDecimal"/>
        <EditTextPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/decode_dir"
            android:key="DecodeDirectory"
            android:summary="@string/decode_dir_summary_may_change"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/mtrl_pref_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/apk_building"
        android:key="ApkBuilding">
        <MultiSelectListPreference
            android:entries="@array/sign_names"
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/sign_version"
            android:key="SignatureVersion"
            android:summary="@string/sign_version_summary"
            android:defaultValue="@array/sign_defaults"
            android:entryValues="@array/sign_values"/>
        <com.gmail.heagoo.apkeditor.KeyListPreference
            android:entries="@array/signer_key"
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/sign_apk_with"
            android:key="SignApkWith"
            android:summary="@string/sign_apk_with_summary"
            android:entryValues="@array/signer_value_dont_translate"/>
        <ListPreference
            android:entries="@array/output_apkname_key"
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/output_apk_name"
            android:key="OutputApkName"
            android:summary="@string/output_apk_name_summary"
            android:entryValues="@array/output_apkname_value"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/smali_editing"
            android:key="SmaliEditingEnabled"
            android:summary="@string/smali_edit_summary"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/rebuild_confirmation"
            android:key="RebuildConfirmation"
            android:summary="@string/rebuild_confirm_d_summary"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/external_editor"
            android:key="ExternalEditor"
            android:summary="@string/external_editor_d_summary"/>
        <ListPreference
            android:entries="@array/file_extract_rename_key"
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/file_rename"
            android:key="FileRenameOption"
            android:summary="@string/file_extract_rename_summary"
            android:entryValues="@array/file_extract_rename_value"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/mtrl_pref_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/others">
        <Preference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/pref_title_clean_str"
            android:key="clean_str"
            android:summary="@string/pref_summary_clean_str"/>
        <Preference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/pref_title_clean_res"
            android:key="clean_res"
            android:summary="@string/pref_summary_clean_res"/>
        <Preference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/pref_title_clean_mf"
            android:key="clean_mf"
            android:summary="@string/pref_summary_clean_mf"/>
        <Preference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/clean_garbage"
            android:key="CleanGarbage"
            android:summary="@string/clean_garbage_summary"/>
    </PreferenceCategory>
</PreferenceScreen>
