<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_apk"
                android:text="@string/action_apk"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_app"
                android:text="@string/action_app"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_prj"
                android:text="@string/action_prj"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_odex"
                android:text="@string/action_odex"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_sign"
                android:text="@string/action_sign"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_verify"
                android:text="@string/action_verify"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_db"
                android:text="@string/action_db"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_info"
                android:text="@string/action_info"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_settings"
                android:text="@string/action_sett"
                style="@style/MD.H"/>
            <Button
                android:id="@+id/btn_exit"
                android:text="@string/action_exit"
                style="@style/MD.H"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
